// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createAlertPolicyEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Policy",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "combiner": "OR",
        "creationRecord": Object {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "displayName": "Example Alert Policy",
        "enabled": true,
        "mutationRecord": Object {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "name": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
      },
    },
  ],
  "_type": "google_monitoring_alert_policy",
  "conditionFilters": undefined,
  "content": "",
  "createdOn": 1612282703127,
  "displayName": "Example Alert Policy",
  "enabled": true,
  "name": "Example Alert Policy",
  "summary": "Alert policy that is triggered based on some metric",
  "title": "Alert policy",
  "updatedOn": 1612282703127,
  "webLink": "https://console.cloud.google.com/monitoring/alerting/policies/9246450381922925470?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createAlertPolicyEntity should convert to entity with conditionFilters array 1`] = `
Object {
  "_class": Array [
    "Policy",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "combiner": "OR",
        "conditions": Array [
          Object {
            "conditionThreshold": Object {
              "aggregations": Array [
                Object {
                  "alignmentPeriod": "300s",
                  "perSeriesAligner": "ALIGN_RATE",
                },
              ],
              "comparison": "COMPARISON_GT",
              "duration": "0s",
              "filter": "metric.type=\\"logging.googleapis.com/user/my-example-metric\\" AND resource.type=\\"metric\\"",
              "trigger": Object {
                "count": 1,
              },
            },
            "displayName": "test condition",
            "name": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470/conditions/9246450381922923601",
          },
        ],
        "creationRecord": Object {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "displayName": "Example Alert Policy",
        "enabled": true,
        "mutationRecord": Object {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "name": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
      },
    },
  ],
  "_type": "google_monitoring_alert_policy",
  "conditionFilters": Array [
    "metric.type=\\"logging.googleapis.com/user/my-example-metric\\" AND resource.type=\\"metric\\"",
  ],
  "content": "",
  "createdOn": 1612282703127,
  "displayName": "Example Alert Policy",
  "enabled": true,
  "name": "Example Alert Policy",
  "summary": "Alert policy that is triggered based on some metric",
  "title": "Alert policy",
  "updatedOn": 1612282703127,
  "webLink": "https://console.cloud.google.com/monitoring/alerting/policies/9246450381922925470?project=j1-gc-integration-dev-v2",
}
`;
